--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/bash"]
+	path = lib/bash
+	url = https://github.com/evmgolf/bash
+[submodule "lib/codec"]
+	path = lib/codec
+	url = https://github.com/evmgolf/codec
